--- a/src/templates/subreddit.hbs
+++ b/src/templates/subreddit.hbs
@@ -1,5 +1,6 @@
 <div>{{name}}</div>
 <div>{{order}}</div>
+<div>{{controllers.stream.name}}</div>
 <div>
     <ul>
         {{#each feed in controllers.stream}}
