--- a/src/templates/views/feed-tile.hbs
+++ b/src/templates/views/feed-tile.hbs
@@ -1,4 +1,8 @@
-<div>
+{{#if isImage}}
+    <img class="subreddit__grid-tile__thumbnail" {{bind-attr src=thumbnail}}>
+{{/if}}
+
+<div class="subreddit__grid-tile__header">
     <h1>{{author}}</h1>
     <h1>{{title}}</h1>
 </div>
