--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -6,3 +6,11 @@
   right: 0;
   margin: auto;
 }
+
+$dark-blue: #21333D;
+$deep-blue: #405365;
+$pale-blue: #65727E;
+
+$dark-green: #4d8456;
+$deep-green: #64ac70;
+$pale-green: #92D19C;
