--- a/src/styles/scss/partials/_feed-tile.scss
+++ b/src/styles/scss/partials/_feed-tile.scss
@@ -1,6 +1,6 @@
 .subreddit__grid-tile {
   width: 300px;
-  background-color: gray;
+  background-color: #ffffff;
 }
 
 .subreddit__grid-tile__thumbnail {
