fullscreen toggle added

--- a/src/templates/subreddit.hbs
+++ b/src/templates/subreddit.hbs
@@ -1,6 +1,6 @@
 <div class="subreddit__navbar">
 
-    <div class="subreddit__navbar__toggle">
+    <div class="subreddit__navbar__toggle" {{action "toggleFullscreen"}}>
         <span>&#9776;</span>
     </div>
 
