--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -2,10 +2,32 @@
 @import "compass";
 
 @import "partials/welcome";
+@import "partials/sidebar";
 @import "partials/subreddit";
 @import "partials/feed-tile";
 
 html, body {
   height: 100%;
   background-color: rgb(215, 215, 215);
+}
+
+.main-container {
+
+  @include box-shadow(-4px 0px 3px 0px rgba(68, 68, 68, 0.7));
+  @include transition(left 0.5s);
+  position: absolute;
+  top:0;
+  bottom: 0;
+  right: 0;
+  left: 15em;
+
+  padding-top: $navbar-height+1em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  background-color: $deep-green;
+
+  &.is-fullscreen {
+    left: 0;
+  }
+
 }
