--- a/src/styles/scss/partials/_feed-tile.scss
+++ b/src/styles/scss/partials/_feed-tile.scss
@@ -2,6 +2,8 @@
 
 .subreddit__grid-tile {
 
+  @include border-radius(8px);
+  overflow: hidden;
   width: 400px;
   background-color: #ffffff;
 
@@ -12,6 +14,27 @@
 
 }
 
-.subreddit__grid-tile__header {
+.grid-tile__metadata {
   padding: 0.5em;
+}
+
+.grid-tile__title-bar {
+
+  a:link, a:hover, a:visited, a:active {
+    text-decoration: none;
+  }
+
+  a {
+    display: block;
+  }
+
+  span {
+    color: rgb(0, 92, 0);
+    font-weight: bold;
+  }
+
+  background-color: rgb(207, 255, 134);
+  font-size: 1.2em;
+  padding: 0.5em;
+
 }
