chagned to xbox style

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -8,7 +8,11 @@
 
 html, body {
   height: 100%;
-  background-color: rgb(215, 215, 215);
+  background-color: #424245;
+}
+
+a:link, a:hover, a:visited, a:active {
+  text-decoration: none;
 }
 
 .main-container {
@@ -24,7 +28,7 @@ html, body {
   padding-top: $navbar-height+1em;
   padding-left: 0.5em;
   padding-right: 0.5em;
-  background-color: $deep-green;
+  background-color: #2C2B2C;
 
   &.is-fullscreen {
     left: 0;
