--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -9,6 +9,7 @@
 html, body {
   height: 100%;
   background-color: #424245;
+  font-family: "Times New Roman";
 }
 
 a:link, a:hover, a:visited, a:active {
