switched to query-params to control order

--- a/src/templates/subreddit.hbs
+++ b/src/templates/subreddit.hbs
@@ -12,7 +12,7 @@
         {{#each order in orders}}
 
             {{#view view.OrderTabView order=order}}
-                {{#link-to "subreddit" name view.order}}
+                {{#link-to "subreddit" name (query-params order=view.order)}}
                     <span>{{view.order}}</span>
                 {{/link-to}}
             {{/view}}
