better looking list

--- a/src/styles/scss/partials/_subreddit.scss
+++ b/src/styles/scss/partials/_subreddit.scss
@@ -61,7 +61,7 @@ $navbar-height: 4em;
 // Subreddit
 //=======================================================
 
-$feed-list-gap: 1em;
+$feed-list-gap: 8px;
 
 .subreddit__container {
   position: absolute;
