post view image added

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -5,6 +5,7 @@
 @import "partials/sidebar";
 @import "partials/subreddit";
 @import "partials/feed-tile";
+@import "partials/post";
 
 html, body {
   height: 100%;
