--- a/src/templates/subreddit/post.hbs
+++ b/src/templates/subreddit/post.hbs
@@ -1,3 +1,9 @@
 <div class="subreddit__post-container">
-    this is a post
+
+    {{#if hasFull}}
+        <img {{bind-attr src=url}}>
+    {{/if}}
+
+    <div> this is a post </div>
+
 </div>
