--- a/src/styles/scss/partials/_feed-tile.scss
+++ b/src/styles/scss/partials/_feed-tile.scss
@@ -1,5 +1,21 @@
 @import "compass";
 
+// feed list
+
+.feed-list__item__thumbnail {
+  @include flex(0 0 4.5em);
+  height: 100%;
+  background-color: black;
+  color: white;
+}
+
+.feed-list__item__title {
+  @include flex(1 0 0);
+  margin-left: 0.5em;
+}
+
+// feed grid
+
 .subreddit__grid-tile {
 
   overflow: hidden;
