thumbnail in list added

--- a/src/styles/scss/partials/_feed-tile.scss
+++ b/src/styles/scss/partials/_feed-tile.scss
@@ -7,6 +7,8 @@
   height: 100%;
   background-color: black;
   color: white;
+  background-position: 50%;
+  background-size: cover;
 }
 
 .feed-list__item__title {
