--- a/src/templates/subreddit.hbs
+++ b/src/templates/subreddit.hbs
@@ -54,11 +54,11 @@
 
                                 {{#if feed.hasThumbnail}}
                                     <div class="feed-list__item__thumbnail" {{bind-attr style=feed.backgroundStyle}}>
-                                        {{feed.score}}
+                                        <h1>{{feed.score}}</h1>
                                     </div>
                                 {{else}}
                                     <div class="feed-list__item__thumbnail">
-                                        {{feed.score}}
+                                        <h1>{{feed.score}}</h1>
                                     </div>
                                 {{/if}}
 
