comment tree added

--- a/src/templates/subreddit.hbs
+++ b/src/templates/subreddit.hbs
@@ -48,7 +48,7 @@
                 <ul>
                     {{#each feed in controllers.stream}}
 
-                        {{#link-to "subreddit.post" feed.model}}
+                        {{#link-to "subreddit.post" feed.id}}
 
                             <li class="subreddit__feed-list__item">
 
