--- a/src/templates/views/comment-tree.hbs
+++ b/src/templates/views/comment-tree.hbs
@@ -3,7 +3,13 @@
         <li class="post__comments__item">
 
             <h1 class="post__comments__body">
-                <span>{{comment.data.body}}</span>
+                <p>
+                    {{#if comment.data.body}}
+                        {{comment.data.body}}
+                    {{else}}
+                        [Deleted]
+                    {{/if}}
+                </p>
             </h1>
 
             {{#if comment.data.replies}}
