--- a/src/styles/scss/partials/_subreddit.scss
+++ b/src/styles/scss/partials/_subreddit.scss
@@ -117,6 +117,7 @@ $feed-list-gap: 8px;
   color: gray;
   display: flex;
   @include align-items(center);
+  overflow: hidden;
 }
 
 .subreddit__load {
