--- a/src/templates/subreddit/post.hbs
+++ b/src/templates/subreddit/post.hbs
@@ -9,6 +9,7 @@
         <h1 class="post__title-bar__stats">
             <span class="post__title-bar__up">{{post.ups}}</span>
             <span class="post__title-bar__down">{{post.downs}}</span>
+            <a class="post__title-bar__link" target="_blank" {{bind-attr href=post.redditLink}}>&#10132;</a>
         </h1>
     </div>
 
